# tem-seg

./: .bumpversion.toml  .gitattributes  .gitignore  LICENSE.md  README.md  environment.yaml  pyproject.toml  ruff.toml
.github/workflows/: release.yml
docs/: cli.md  configuration.md  custom_dataset.md  data.md  installation.md  models_and_data.md  usage.md
planning/: TODO.md  implementation_progress.md  implementation_scaffold.md  implementation_strategy.md
planning/progress_reports/: 2025-07-14_project_kickoff.md  2025-07-14_scale_estimation_system.md  2025-07-15_model_configuration_refactoring.md
scripts/: download_images.bat  download_images.ps1  download_images.sh  download_models.sh  make_tfrecords.bat  make_tfrecords.ps1  make_tfrecords.sh
src/tem_analysis_pipeline/: calibration.py  prediction_tools.py  scale_estimation.py  settings.toml
src/tem_analysis_pipeline/analysis/: _analysis.py  _consolidate.py
src/tem_analysis_pipeline/assets/: __init__.py  _download.py
src/tem_analysis_pipeline/cmd/: __init__.py  _compute_analysis.py  _compute_prediction.py  _preprocess.py  _train.py  scale_estimation.py  train.py
src/tem_analysis_pipeline/config/: __init__.py  _assets_config.py  _config.py  _environment_config.py  _settings.py  _utils.py
src/tem_analysis_pipeline/configuration/: __init__.py  config.py  presets.py  validation.py
src/tem_analysis_pipeline/model/: _unet.py  _unetplusplus.py  _unetpp.py  base.py  config.py  custom_objects.py  losses.py  metrics.py  registry.py  utils.py
src/tem_analysis_pipeline/utils/: _download.py
src/tem_seg/: __init__.py  calibration.py  prediction_tools.py  settings.toml
tests/: test_model_config.py
tests/integration/: test_cli.py  test_scale_estimation_integration.py
tests/unit/: test_scale_cli.py
(+33 files in other folders)
