[project]
name = "tem-analysis-pipeline"
version = "0.1.0"
description = "Codebase for the analysis of mitochondria morphology using semantic segmentation on TEM images."
readme = "README.md"
authors = [
    { name = "Argenis Arriojas", email = "arriojasmaldonado001@umb.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy<2.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "tensorflow[and-cuda]>=2.19.0",
]

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"
